# chroma-play

./: chroma_emb.py  main.py  pinecone_db_llm_lang_chain.py  pyproject.toml  raw_emb.py  vector_db_llm.py
