[project]
name = "chroma-play"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.0.20",
    "langchain-community>=0.3.27",
    "langchain-openai>=0.3.30",
    "langchain-pinecone>=0.2.11",
    "openai>=1.100.2",
    "pinecone>=7.3.0",
    "python-dotenv>=1.1.1",
]
